deployment/deployment-dev.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: api-inw-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-inw-dev
  template:
    metadata:
      labels:
        app: api-inw-dev
    spec:
      containers:
      - name: api-inw-dev
        image: gcr.io/appDomain-123456/api-inw-dev:latest
        ports:
        - containerPort: 8000
