deployment/deployment-prod.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: api-inw-prod
spec:
  replicas: 5
  selector:
    matchLabels:
      app: api-inw-prod
  template:
    metadata:
      labels:
        app: api-inw-prod
    spec:
      containers:
      - name: api-inw-prod
        image: gcr.io/invoicewave-123456/api-inw-prod:latest
        ports:
        - containerPort: 8000
