deployment/deployment-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-inw-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-inw-staging
  template:
    metadata:
      labels:
        app: api-inw-staging
    spec:
      containers:
      - name: api-inw-staging
        image: gcr.io/appDomain-123456/api-inw-staging:latest
        ports:
        - containerPort: 8000
